# rocket-man

./: experiment.ipynb  pyproject.toml
.ipynb_checkpoints/: experiment-checkpoint.ipynb
data/: stock.csv  tweets.csv
