[tool.poetry]
name = "rocket-man"
version = "1.0.0"
description = ""
authors = ["Kash Nouroozi <knouroozi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.4"
sklearn = "^0.0"
numpy = "^1.19.4"
seaborn = "^0.11.0"
yahoofinancials = "^1.6"
jupyter_nbextensions_configurator = "^0.4.1"
tweepy = "^3.9.0"
boto3 = "^1.16.23"
searchtweets = "^1.7.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
black = "^20.8b1"
ipython = "^7.19.0"
ipdb = "^0.13.4"
jupyter_nbextensions_configurator = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
